added the css3 in 30 days logo

--- a/index.html
+++ b/index.html
@@ -18,6 +18,14 @@
          <img class="layer-3" src="img/layer-3.svg" alt="vector input form layers">
          <img class="layer-4" src="img/layer-4.svg" alt="vector input form layers">
       </div>
+
+      <div class="layers-2">
+         <img class="circle" src="img/circle.svg" alt="">
+         <img class="css3" src="img/css3.svg" alt="">
+         <img class="in-30-days" src="img/in-30-days.svg" alt="">
+         <img class="brad" src="img/brad-hussey-1.svg" alt="">
+      </div>
+
    </div>
 
 </body>
