--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
    <meta charset="UTF-8">
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+   <link href="https://use.fontawesome.com/releases/v5.0.6/css/all.css" rel="stylesheet">
    <link rel="stylesheet" href="styles.css">
    <title>3D Layer Effect</title>
 </head>
@@ -18,14 +19,12 @@
          <img class="layer-3" src="img/layer-3.svg" alt="vector input form layers">
          <img class="layer-4" src="img/layer-4.svg" alt="vector input form layers">
       </div>
+   </div>
 
-      <div class="layers-2">
-         <img class="circle" src="img/circle.svg" alt="">
-         <img class="css3" src="img/css3.svg" alt="">
-         <img class="in-30-days" src="img/in-30-days.svg" alt="">
-         <img class="brad" src="img/brad-hussey-1.svg" alt="">
-      </div>
-
+   <div class="navigation">
+      <a href="https://davidlower.github.io/sliding-content-panels-css30-day25/"><i class="fas fa-angle-left"></i></a>
+      <a href="http://davidlower.co.uk/html/css3-in-30-days"><i class="fas fa-th-large"></i></a>
+      <a href="https://davidlower.github.io/css3-only-dropdown-menu-css30-day27/"><i class="fas fa-angle-right"></i></a>
    </div>
 
 </body>
