--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
    <div class="navigation">
       <a href="https://davidlower.github.io/sliding-content-panels-css30-day25/"><i class="fas fa-angle-left"></i></a>
-      <a href="http://davidlower.co.uk/html/css3-in-30-days"><i class="fas fa-th-large"></i></a>
+      <a href="https://davidlower.co.uk/projects/"><i class="fas fa-th-large"></i></a>
       <a href="https://davidlower.github.io/css3-only-dropdown-menu-css30-day27/"><i class="fas fa-angle-right"></i></a>
    </div>
 
